style: fix z-index search issue

--- a/src/components/component-css/header.css
+++ b/src/components/component-css/header.css
@@ -51,6 +51,10 @@ header {
   color: var(--black) !important;
 }
 
+.css-26l3qy-menu {
+  z-index: 2 !important;
+}
+
 .theme-toggle {
   cursor: pointer;
 }
